--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "production": "gulp package --env production",
     "watch": "gulp watch --env local",
-    "build-dev": "gulp build-templates --env local",
-    "build-production": "gulp build-templates --env production",
+    "build-dev": "gulp build --env local",
+    "build-production": "gulp build --env production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
