--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-posthtml": "^3.0.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-vars": "^1.3.0",
     "gulp-tap": "^1.0.1",
     "gulp-zip": "^4.0.0",
     "posthtml": "^0.9.2",
