--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^4.0.0",
@@ -27,6 +28,7 @@
     "posthtml-expressions": "^1.1.0",
     "posthtml-include": "^1.1.0",
     "run-sequence": "^2.2.0",
+    "webpack": "^3.10.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {},
