--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^4.0.0",
+    "glob-fs": "^0.1.7",
     "gulp": "^3.9.1",
     "gulp-posthtml": "^3.0.0",
     "gulp-sass": "^3.1.0",
