--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "posthtml": "^0.9.2",
     "posthtml-expressions": "^1.1.0",
     "posthtml-include": "^1.1.0",
+    "promise-polyfill": "^7.0.2",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "run-sequence": "^2.2.0",
     "webpack": "^3.10.0",
     "yargs": "^10.0.3"
