--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
+    "babel-loader": "^8.0.6",
     "glob-fs": "^0.1.7",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
@@ -36,7 +37,8 @@
     "posthtml": "^0.11.6",
     "posthtml-expressions": "^1.1.1",
     "posthtml-include": "^1.2.0",
-    "webpack": "^4.41.0"
+    "webpack": "^4.41.0",
+    "webpack-merge": "^4.2.2"
   },
   "keywords": []
 }
