--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^9.6.1",
-    "braces": "^3.0.2",
+    "babel-preset-es2015": "^6.24.1",
     "dotenv": "^8.1.0",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
