--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sass-vars": "^1.3.0",
     "gulp-tap": "^2.0.0",
     "gulp-zip": "^5.0.0",
+    "gulp4-run-sequence": "^1.0.0",
     "posthtml": "^0.11.6",
     "posthtml-expressions": "^1.1.1",
     "posthtml-include": "^1.2.0",
