--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.7.4",
     "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^8.1.0",
@@ -41,6 +41,7 @@
     "yargs": "^14.0.0"
   },
   "devDependencies": {
+    "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
   },
   "keywords": []
