--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-tap": "^2.0.0",
     "gulp-zip": "^5.0.1",
     "gulp4-run-sequence": "^1.0.0",
+    "lodash.template": "^4.5.0",
     "posthtml": "^0.12.0",
     "posthtml-expressions": "^1.1.1",
     "posthtml-include": "^1.3.2",
@@ -37,6 +38,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "run-sequence": "^2.2.1",
+    "serialize-javascript": "^2.1.2",
     "webpack": "^4.41.2",
     "yargs": "^15.0.2"
   },
