--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/register": "^7.7.4",
     "autoprefixer": "^9.7.3",
-    "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "dotenv": "^8.2.0",
     "glob-fs": "^0.1.7",
     "gulp": "^4.0.2",
@@ -29,12 +31,12 @@
     "gulp-sass-vars": "^1.3.0",
     "gulp-tap": "^2.0.0",
     "gulp-zip": "^5.0.1",
-    "gulp4-run-sequence": "^1.0.0",
     "lodash.template": "^4.5.0",
     "posthtml": "^0.12.0",
     "posthtml-expressions": "^1.1.1",
     "posthtml-include": "^1.3.2",
     "promise-polyfill": "^8.1.3",
+    "regenerator-runtime": "^0.13.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "run-sequence": "^2.2.1",
@@ -43,6 +45,11 @@
     "yargs": "^15.0.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
   },
