--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
   },
