--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
 node_modules/
 tmp/
+dist/.zat
 dist/templates
 dist/style.css
 dist/script.js
-dist/.zat
+dist/article_page.js",
+dist/category_page.js",
+dist/community_post_list_page.js",
+dist/community_post_page.js",
+dist/community_topic_list_page.js",
+dist/community_topic_page.js",
+dist/contributions_page.js",
+dist/error_page.js",
+dist/footer.js",
+dist/header.js",
+dist/home_page.js",
+dist/new_community_post_page.js",
+dist/new_request_page.js",
+dist/request_page.js",
+dist/requests_page.js",
+dist/search_results.js",
+dist/section_page.js",
+dist/subscriptions_page.js",
+dist/user_profile_page.js"
