Fix webpack file entries for template files javascript

--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,22 @@ dist/.zat
 dist/templates
 dist/style.css
 dist/script.js
-dist/article_page.js",
-dist/category_page.js",
-dist/community_post_list_page.js",
-dist/community_post_page.js",
-dist/community_topic_list_page.js",
-dist/community_topic_page.js",
-dist/contributions_page.js",
-dist/error_page.js",
-dist/footer.js",
-dist/header.js",
-dist/home_page.js",
-dist/new_community_post_page.js",
-dist/new_request_page.js",
-dist/request_page.js",
-dist/requests_page.js",
-dist/search_results.js",
-dist/section_page.js",
-dist/subscriptions_page.js",
-dist/user_profile_page.js"
+dist/assets/article_page.js
+dist/assets/category_page.js
+dist/assets/community_post_list_page.js
+dist/assets/community_post_page.js
+dist/assets/community_topic_list_page.js
+dist/assets/community_topic_page.js
+dist/assets/contributions_page.js
+dist/assets/error_page.js
+dist/assets/footer.js
+dist/assets/header.js
+dist/assets/home_page.js
+dist/assets/new_community_post_page.js
+dist/assets/new_request_page.js
+dist/assets/request_page.js
+dist/assets/requests_page.js
+dist/assets/search_results.js
+dist/assets/section_page.js
+dist/assets/subscriptions_page.js
+dist/assets/user_profile_page.js
