Refactor gulpfile and fix some broken helpers

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posthtmltest",
+  "name": "zendesk-guide-theme-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
